# aoc18

day1/: freq.exs  hfreq.hs
day2/: hlabels.hs  labels.exs
day3/: claim.exs
day3/hclaims/: README.md  hclaims.cabal
day3/hclaims/.stack-work/install/x86_64-linux/lts-12.21/8.4.4/flag-cache/: OneTuple-0.2.2-LXqpUObh9fFAZofghYnL2B  hclaims-0.1.0.0  regex-base-0.93.2-98bD2PeVUkV8MO804tnXmq  regex-pcre-0.94.4-En863jhgaI47e1fhwYGIaI  tuple-0.3.0.2-DMOgWTqF6R3EUObcyL1UGb
day3/hclaims/src/: Main.hs
day4/: guard.exs
day5/: react.exs
day6/: chronal.exs
day7/: sleigh.exs
day8/: nodes.exs
