name:                hclaims
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hclaims#readme
license:             BSD3
license-file:        LICENSE
author:              Cameron Price
maintainer:          cameronp@gmail.com
copyright:           2018 Cameron Price
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hclaims
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , regex-pcre
                       , containers
                       , tuple